--- a/blocks/button.css
+++ b/blocks/button.css
@@ -21,7 +21,7 @@
   background-color: #5877e7;
   border-radius: 8px;
   border: 2px solid #fff;
-  transition: 0.3s;
+  transition: 0.3s ease-in-out;
   cursor: pointer;
   font-family: Inter, Arial, sans-serif;
   color: #fff;
