--- a/blocks/todo.css
+++ b/blocks/todo.css
@@ -68,6 +68,11 @@
   font-weight: 500;
   color: #f44;
   cursor: pointer;
+  transition: 0.3s ease-in-out;
+}
+
+.todo__delete-btn:hover {
+  opacity: 0.5;
 }
 
 .todo__delete-btn::before {
